Added sizes to lattes and prices.

--- a/src/_includes/layouts/test.html
+++ b/src/_includes/layouts/test.html
@@ -177,7 +177,7 @@
     <h3 class="sidebar">{{ miscellaneous.summaryEleven }}</h3>
       <div class="extras">
         <p>{{ miscellaneous.summaryFifteen }}:
-          {% for dressing in misc.prices_by_size %}
+          {% for prices_by_size in misc.prices_by_size %}
           {{ prices_by_size }}
           {% endfor %}
         </p>
