Small change to social icons.

--- a/src/_includes/partials/site-foot.html
+++ b/src/_includes/partials/site-foot.html
@@ -6,7 +6,7 @@
           <svg class="icon icon-facebook" role="img" aria-label="The Facebook icon which is the letter F">
             <title>A link to the DowntownGrille Facebook page</title>
             <desc id="facebook">A letter F.</desc>
-            <use href="/img/symbol-defs.svg#icon-facebook" alt="The Facebook icon which is the letter F">F</use>
+            <use href="/img/symbol-defs.svg#icon-facebook" alt="The Facebook icon which is the letter F"></use>
           </svg>
       </i>
     </a>
@@ -15,7 +15,7 @@
         <svg class="icon icon-instagram" role="img" aria-label="The Instagram icon which looks like a Polaroid camera">
           <title>A link to the DowntownGrille Instagram page</title>
           <desc id="instagram">A Polaroid camera.</desc>
-          <use href="/img/symbol-defs.svg#icon-instagram" alt="The Instagram icon which looks like a Polaroid camera">I</use>
+          <use href="/img/symbol-defs.svg#icon-instagram" alt="The Instagram icon which looks like a Polaroid camera"></use>
         </svg>
       </i>
     </a>
