Small change to footer structure.

--- a/src/_includes/partials/site-foot.html
+++ b/src/_includes/partials/site-foot.html
@@ -1,5 +1,5 @@
 <footer>
-  <p>Find us online!
+  <span>Find us online!
     <a class="social-item" href="https://facebook.com/downtowngrillecafenh/" aria-label="A link to the DowntownGrille Cafe Facebook page.">
       <i
         class="icon-social-facebook icons primary-headline">
@@ -19,5 +19,5 @@
         </svg>
       </i>
     </a>
-  </p>
+  </span>
 </footer>
