--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -43,6 +43,6 @@
     {% block content %}{% endblock %}
     </main>
     {% include "partials/site-foot.html" %}
-    <script src="../src/js/svgxuse.js" async></script>
+    <script src="../js/svgxuse.js" async></script>
   </body>
 </html>
