--- a/css/critical.css
+++ b/css/critical.css
@@ -219,8 +219,8 @@ h1.primary-subheadline {
   color: #563c1f;
   background: #fdfdfc;
   text-transform: uppercase;
-  padding: 4.5rem 1.6rem 0 1.6rem;
-  text-align: center
+  padding: 2rem 1.6rem 0 1.6rem;
+  align-self: center
 }
 
 @media (min-width:550px) and (max-width:768px) {
