--- a/src/_includes/layouts/test.html
+++ b/src/_includes/layouts/test.html
@@ -100,6 +100,14 @@
         </div>
       </div>
     </div>
+
+    <div class="extras">
+      {{ miscellaneous.summarySevenB }}:
+
+      {% for burger_notice in lunchMenu.burger_notice %}
+        {{ burger_notice }}
+      {% endfor %}
+    </div>
     {% endfor %}
 
     <h4 class="section-subheadline">{{ lunch.summarySeven }}</h4>
