Fix for notice for burgers.

--- a/src/_includes/layouts/test.html
+++ b/src/_includes/layouts/test.html
@@ -102,7 +102,7 @@
     </div>
 
     <div class="extras">
-      <p>{{ miscellaneous.summarySevenB }}:
+      <p>{{ lunch.summarySevenB }}:
         {% for burger_notice in lunchMenu.burger_notice %}
           {{ burger_notice }}
         {% endfor %}
