--- a/src/_includes/partials/site-foot.html
+++ b/src/_includes/partials/site-foot.html
@@ -1,5 +1,5 @@
 <footer>
-  <span>Find us online!
+  <span class="online">Find us online!
     <a class="social-item" href="https://facebook.com/downtowngrillecafenh/" aria-label="A link to the DowntownGrille Cafe Facebook page.">
       <i
         class="icon-social-facebook icons primary-headline">
