Fix margin/padding under social iconography in footer

--- a/src/scss/blocks/_site-foot.scss
+++ b/src/scss/blocks/_site-foot.scss
@@ -19,11 +19,11 @@ footer p {
 }
 
 footer .social-item {
-  display: inline-block;
+  display: flex;
 }
 
 footer .social-item i {
-  display: inline-block;
+  display: flex;
   width: 60px;
   height: 60px;
   text-align: center;
