Add ChowNow ordering button

--- a/src/_includes/layouts/test.html
+++ b/src/_includes/layouts/test.html
@@ -239,8 +239,8 @@
       {% endfor %}
     </div>
 
-    <!-- <button class="menu-download"><a href="#">{{ intro.buttonText }}</a></button>
-    <button class="order-online"><a href="#">{{ intro.orderOnline }}</a></button> -->
+    <!-- <button class="menu-download"><a href="#">{{ intro.buttonText }}</a></button>-->
+    <button class="order-online"><a href="https://ordering.chownow.com/order/25664/locations/37948?add_cn_ordering_class=true">{{ intro.orderOnline }}</a></button>
 
     <section id="others">
       <p>{{ others.inform }}</p>
