Added price increases the menu items.

--- a/src/_includes/partials/site-head.html
+++ b/src/_includes/partials/site-head.html
@@ -9,7 +9,7 @@
     <h1>{{ intro.main }}</h1>
   </div>
   <div class="specials">
-    <h2 class="primary-subheadline">{{ intro.eyebrow }}</h2>
+    <h2 class="primary-headline">{{ intro.eyebrow }}</h2>
   </div>
 
   <ul class="legend">
