Updated menu items for consumer advisory issues.

--- a/src/_includes/layouts/home.html
+++ b/src/_includes/layouts/home.html
@@ -14,6 +14,6 @@
     <p>Please inform someone of any other food allergies that someone in your party may have. Thank
       you.</p>
     <p>Prices subject to change and do not include 9&percnt; New Hampshire meals tax.</p>
-    <p>Consuming raw or undercooked meats, poultry, seafood, shellfish, or eggs may increase your risk of food-borne illness.</p>
+    <p class="advisory">Items marked with an asterisk* may be served raw or undercooked; Consuming raw or undercooked meats, poultry, seafood, shellfish, or eggs may increase your risk of foodborne illness, especially if you have certain medical conditions.</p>
   </section>
 {% endblock %}
