Updated menu items for consumer advisory issues.

--- a/src/_includes/layouts/test.html
+++ b/src/_includes/layouts/test.html
@@ -245,6 +245,6 @@
     <section id="others">
       <p>{{ others.inform }}</p>
       <p>{{ others.prices }}</p>
-      <p>{{ others.rawFood }}</p>
+      <p class="advisory">{{ others.rawFood }}</p>
     </section>
     {% endblock %}
