--- a/src/_includes/partials/site-foot.html
+++ b/src/_includes/partials/site-foot.html
@@ -1,21 +1,21 @@
 <footer>
   <span class="online">Find us online!
-    <a class="social-item" href="https://facebook.com/downtowngrillecafenh/" aria-label="A link to the DowntownGrille Cafe Facebook page.">
+    <a class="social-item" href="https://facebook.com/downtowngrillecafe/" aria-label="A link to the DowntownGrille Cafe Facebook page.">
       <i
         class="icon-social-facebook icons primary-headline">
-          <svg class="icon icon-facebook" role="img" aria-label="The Facebook icon which is the letter F">
+          <svg class="icon icon-facebook" role="img" aria-label="The Facebook icon.">
             <title>A link to the DowntownGrille Facebook page</title>
             <desc id="facebook">A letter F.</desc>
-            <use href="/images/symbol-defs.svg#icon-facebook" alt="The Facebook icon which is the letter F">F</use>
+            <use href="/images/symbol-defs.svg#icon-facebook" alt="The Facebook icon.">F</use>
           </svg>
       </i>
     </a>
     <a class="social-item" href="https://www.instagram.com/downtowngrillecafe/" aria-label="A link to the DowntownGrille Cafe Instagram page.">
       <i class="icon-social-instagram icons primary-headline">
-        <svg class="icon icon-instagram" role="img" aria-label="The Instagram icon which looks like a Polaroid camera">
+        <svg class="icon icon-instagram" role="img" aria-label="The Instagram icon.">
           <title>A link to the DowntownGrille Instagram page</title>
           <desc id="instagram">A Polaroid camera.</desc>
-          <use href="/images/symbol-defs.svg#icon-instagram" alt="The Instagram icon which looks like a Polaroid camera">I</use>
+          <use href="/images/symbol-defs.svg#icon-instagram" alt="The Instagram icon.">I</use>
         </svg>
       </i>
     </a>
